Coverity analysis defect 156741: Data race condition

XMLWordPrintableJSON

    • Cluster Scalability
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Data race condition

      The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
      /data/mci/3b34054db808e84e865ea3adc167bb30/bazel_cache/8efb34a963653a257fe76e59a8ff65e9/execroot/_main/src/mongo/db/s/balancer_stats_registry.cpp:144: MISSING_LOCK 156741 Accessing "this->this->_initOpCtxHolder" without holding lock "mongo::BalancerStatsRegistry._stateMutex". Elsewhere, "mongo::BalancerStatsRegistry._initOpCtxHolder" is written to with "BalancerStatsRegistry._stateMutex" held 2 out of 2 times.

            Assignee:
            Kruti Shah
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: