SERVER-108621 Coverity 156741: Fix lock missing warning in balancer stats registry initialization (#40447)

GitOrigin-RevId: e36162cb778838b939f7d9d082dc925fe64e3d7a